<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="130dp"
            android:text="@string/taskName_lbl"
            android:id="@+id/task_name_lbl"
            android:textAlignment="viewStart"
            android:textStyle="normal|bold"
            android:textAllCaps="false" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:text=""
            android:ems="12"
            android:id="@+id/task_name_value"
            android:layout_weight="1"
            android:layout_alignTop="@+id/task_name_lbl"
            android:layout_alignBottom="@+id/task_name_lbl"
           />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_height="match_parent"
            android:layout_width="130dp"
            android:text="@string/task_due_date"
            android:id="@+id/task_due_date_lbl"
            android:textAlignment="viewStart"
            android:textStyle="normal|bold"
            android:textAllCaps="false" />

        <DatePicker
            android:id="@+id/task_due_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_alignTop="@+id/task_due_date_lbl"
            android:layout_alignBottom="@+id/task_due_date_lbl"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_height="match_parent"
            android:layout_width="130dp"
            android:text="@string/task_notes"
            android:id="@+id/task_note_lbl"
            android:textAlignment="viewStart"
            android:textStyle="normal|bold"
            android:textAllCaps="false" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:text=""
            android:ems="12"
            android:id="@+id/task_note_value"
            android:layout_weight="1"
            android:layout_alignTop="@+id/task_note_lbl"
            android:layout_alignBottom="@+id/task_note_lbl"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="130dp"
            android:text="@string/task_priority"
            android:id="@+id/task_priority_lbl"
            android:textAlignment="viewStart"
            android:textStyle="normal|bold"
            android:textAllCaps="false" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/task_priority_value"
            android:layout_weight="1"
            android:layout_alignTop="@+id/task_priority_lbl"
            android:layout_alignBottom="@+id/task_priority_lbl"
            android:entries="@array/task_priority_values"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="130dp"
            android:text="@string/task_status"
            android:id="@+id/task_status_lbl"
            android:textAlignment="viewStart"
            android:textStyle="normal|bold"
            android:textAllCaps="false" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/task_status_value"
            android:layout_weight="1"
            android:layout_alignTop="@+id/task_status_lbl"
            android:layout_alignBottom="@+id/task_status_lbl"
            android:entries="@array/task_status_values"/>

    </LinearLayout>
</LinearLayout>